# ecommerce-cli

./: pyproject.toml  requirements.txt
src/: database.py
