[tool.poetry]
name = "ecommerce-cli"
version = "0.1.0"
description = ""
authors = ["shadmeoli <shadcodes@gmail.com>"]
readme = "README.md"
packages = [{include = "ecommerce_cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
